--- a/public/style.css
+++ b/public/style.css
@@ -60,13 +60,14 @@
 }
 
 .my_score{
-    color: rgb(255,0,100) !important;
+    color: rgb(250, 255, 2) !important;
 }
 
-.input {
+#input {
     position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
     z-index: 3;
+    visibility: hidden;
 }
