--- a/public/style.css
+++ b/public/style.css
@@ -77,6 +77,18 @@
     z-index: 2;
 }
 
+#message-multiplier{
+    visibility: hidden;
+    position: fixed;
+    top:40px;
+    transition: font-size;
+    transition-delay: 1s;
+    color: rgb(138,43,226);
+    z-index: 2;
+    left: 42%;
+    font-size: 200%;
+}
+
 .user p{
     color: white;
     display: inline;
